--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 alembic==1.13.1
 appdirs==1.4.4
+appnope==0.1.4
+asttokens==2.4.1
 async-generator==1.10
 attrs==23.2.0
+backcall==0.2.0
 beautifulsoup4==4.12.3
 black==24.3.0
 certifi==2024.2.2
@@ -9,41 +12,61 @@ certipy==0.1.3
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+comm==0.2.2
 cryptography==42.0.5
+debugpy==1.8.1
+decorator==5.1.1
+executing==2.0.1
 frozendict==2.4.1
 greenlet==3.0.3
 html5lib==1.1
 idna==3.6
 importlib_metadata==7.1.0
 importlib_resources==6.4.0
+ipykernel==6.29.4
+ipython==8.12.3
+jedi==0.19.1
 Jinja2==3.1.3
 joblib==1.4.0
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 jupyter-telemetry==0.1.0
+jupyter_client==8.6.1
+jupyter_core==5.7.2
 jupyterhub==4.1.5
 lightgbm==4.3.0
 lxml==5.2.1
 Mako==1.3.2
 MarkupSafe==2.1.5
+matplotlib-inline==0.1.6
 multitasking==0.0.11
 mypy-extensions==1.0.0
+nest-asyncio==1.6.0
 numpy==1.24.4
 oauthlib==3.2.2
 packaging==24.0
 pamela==1.1.0
 pandas==2.0.3
+parso==0.8.4
 pathspec==0.12.1
 peewee==3.17.1
+pexpect==4.9.0
+pickleshare==0.7.5
 pkgutil_resolve_name==1.3.10
 platformdirs==4.2.0
 polars==0.20.19
 prometheus_client==0.20.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pycparser==2.22
+Pygments==2.17.2
 pyOpenSSL==24.1.0
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytz==2024.1
+pyzmq==25.1.2
 referencing==0.34.0
 requests==2.31.0
 rpds-py==0.18.0
@@ -54,6 +77,7 @@ scipy==1.10.1
 six==1.16.0
 soupsieve==2.5
 SQLAlchemy==2.0.29
+stack-data==0.6.3
 threadpoolctl==3.4.0
 tomli==2.0.1
 tornado==6.4
@@ -61,6 +85,8 @@ traitlets==5.14.2
 typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
+utils==1.0.2
+wcwidth==0.2.13
 webencodings==0.5.1
 yfinance==0.2.37
 zipp==3.18.1
