--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ importlib_metadata==7.1.0
 importlib_resources==6.4.0
 ipykernel==6.29.4
 ipython==8.12.3
+isort==5.13.2
 jedi==0.19.1
 Jinja2==3.1.3
 joblib==1.4.0
