--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 alembic==1.13.1
 appdirs==1.4.4
 appnope==0.1.4
+astor==0.8.1
 asttokens==2.4.1
 async-generator==1.10
 attrs==23.2.0
+autograd==1.6.2
+autograd-gamma==0.5.0
 backcall==0.2.0
 beautifulsoup4==4.12.3
 black==24.3.0
@@ -13,16 +16,23 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 comm==0.2.2
+contourpy==1.1.1
 cryptography==42.0.5
+cycler==0.12.1
 debugpy==1.8.1
 decorator==5.1.1
 executing==2.0.1
+fonttools==4.51.0
+formulaic==1.0.1
 frozendict==2.4.1
+future==1.0.0
+graphlib_backport==1.1.0
 greenlet==3.0.3
 html5lib==1.1
 idna==3.6
 importlib_metadata==7.1.0
 importlib_resources==6.4.0
+interface-meta==1.3.0
 ipykernel==6.29.4
 ipython==8.12.3
 isort==5.13.2
@@ -35,10 +45,13 @@ jupyter-telemetry==0.1.0
 jupyter_client==8.6.1
 jupyter_core==5.7.2
 jupyterhub==4.1.5
+kiwisolver==1.4.5
+lifelines==0.27.8
 lightgbm==4.3.0
 lxml==5.2.1
 Mako==1.3.2
 MarkupSafe==2.1.5
+matplotlib==3.7.5
 matplotlib-inline==0.1.6
 multitasking==0.0.11
 mypy-extensions==1.0.0
@@ -53,6 +66,7 @@ pathspec==0.12.1
 peewee==3.17.1
 pexpect==4.9.0
 pickleshare==0.7.5
+pillow==10.3.0
 pkgutil_resolve_name==1.3.10
 platformdirs==4.2.0
 polars==0.20.19
@@ -64,6 +78,7 @@ pure-eval==0.2.2
 pycparser==2.22
 Pygments==2.17.2
 pyOpenSSL==24.1.0
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytz==2024.1
@@ -89,5 +104,6 @@ urllib3==2.2.1
 utils==1.0.2
 wcwidth==0.2.13
 webencodings==0.5.1
+wrapt==1.16.0
 yfinance==0.2.37
 zipp==3.18.1
