--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ black==24.3.0
 certifi==2024.2.2
 certipy==0.1.3
 cffi==1.16.0
+cfgv==3.4.0
 charset-normalizer==3.3.2
 click==8.1.7
 comm==0.2.2
@@ -21,7 +22,9 @@ cryptography==42.0.5
 cycler==0.12.1
 debugpy==1.8.1
 decorator==5.1.1
+distlib==0.3.8
 executing==2.0.1
+filelock==3.14.0
 fonttools==4.51.0
 formulaic==1.0.1
 frozendict==2.4.1
@@ -29,6 +32,7 @@ future==1.0.0
 graphlib_backport==1.1.0
 greenlet==3.0.3
 html5lib==1.1
+identify==2.5.36
 idna==3.6
 importlib_metadata==7.1.0
 importlib_resources==6.4.0
@@ -56,6 +60,7 @@ matplotlib-inline==0.1.6
 multitasking==0.0.11
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
+nodeenv==1.8.0
 numpy==1.24.4
 oauthlib==3.2.2
 packaging==24.0
@@ -70,6 +75,7 @@ pillow==10.3.0
 pkgutil_resolve_name==1.3.10
 platformdirs==4.2.0
 polars==0.20.19
+pre-commit==3.5.0
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
 psutil==5.9.8
@@ -82,6 +88,7 @@ pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytz==2024.1
+PyYAML==6.0.1
 pyzmq==25.1.2
 referencing==0.34.0
 requests==2.31.0
@@ -102,6 +109,7 @@ typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
 utils==1.0.2
+virtualenv==20.26.2
 wcwidth==0.2.13
 webencodings==0.5.1
 wrapt==1.16.0
