--- a/requirements.txt
+++ b/requirements.txt
@@ -74,6 +74,7 @@ pickleshare==0.7.5
 pillow==10.3.0
 pkgutil_resolve_name==1.3.10
 platformdirs==4.2.0
+plotly==5.22.0
 polars==0.20.19
 pre-commit==3.5.0
 prometheus_client==0.20.0
@@ -101,6 +102,7 @@ six==1.16.0
 soupsieve==2.5
 SQLAlchemy==2.0.29
 stack-data==0.6.3
+tenacity==8.3.0
 threadpoolctl==3.4.0
 tomli==2.0.1
 tornado==6.4
