--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ debugpy==1.8.1
 decorator==5.1.1
 distlib==0.3.8
 executing==2.0.1
+fastjsonschema==2.19.1
 filelock==3.14.0
 fonttools==4.51.0
 formulaic==1.0.1
@@ -49,6 +50,7 @@ jupyter-telemetry==0.1.0
 jupyter_client==8.6.1
 jupyter_core==5.7.2
 jupyterhub==4.1.5
+kaleido==0.2.1
 kiwisolver==1.4.5
 lifelines==0.27.8
 lightgbm==4.3.0
@@ -59,6 +61,7 @@ matplotlib==3.7.5
 matplotlib-inline==0.1.6
 multitasking==0.0.11
 mypy-extensions==1.0.0
+nbformat==5.10.4
 nest-asyncio==1.6.0
 nodeenv==1.8.0
 numpy==1.24.4
