--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ identify==2.5.36
 idna==3.6
 importlib_metadata==7.1.0
 importlib_resources==6.4.0
+install==1.3.5
 interface-meta==1.3.0
 ipykernel==6.29.4
 ipython==8.12.3
@@ -78,7 +79,7 @@ pillow==10.3.0
 pkgutil_resolve_name==1.3.10
 platformdirs==4.2.0
 plotly==5.22.0
-polars==0.20.19
+polars-lts-cpu==0.20.26
 pre-commit==3.5.0
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
@@ -114,7 +115,7 @@ traitlets==5.14.2
 typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
--e git+https://github.com/abhishekde95/Projects.git@54628a1fbd5e509c0fc3cd9ca91d2721a36a02b4#egg=utils
+-e git+https://github.com/abhishekde95/Projects.git@c30d2b46523f5afe03f1e60bd6732381c90a4f79#egg=utils
 virtualenv==20.26.2
 wcwidth==0.2.13
 webencodings==0.5.1
