--- a/requirements.txt
+++ b/requirements.txt
@@ -79,6 +79,7 @@ pillow==10.3.0
 pkgutil_resolve_name==1.3.10
 platformdirs==4.2.0
 plotly==5.22.0
+polars-lts-cpu==0.20.26
 pre-commit==3.5.0
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
@@ -114,7 +115,6 @@ traitlets==5.14.2
 typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
--e git+https://github.com/abhishekde95/Projects.git@c30d2b46523f5afe03f1e60bd6732381c90a4f79#egg=utils
 virtualenv==20.26.2
 wcwidth==0.2.13
 webencodings==0.5.1
