--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ cffi==1.16.0
 cfgv==3.4.0
 charset-normalizer==3.3.2
 click==8.1.7
+cmdstanpy==1.2.3
 comm==0.2.2
 contourpy==1.1.1
 cryptography==42.0.5
@@ -32,6 +33,7 @@ frozendict==2.4.1
 future==1.0.0
 graphlib_backport==1.1.0
 greenlet==3.0.3
+holidays==0.50
 html5lib==1.1
 identify==2.5.36
 idna==3.6
@@ -79,10 +81,10 @@ pillow==10.3.0
 pkgutil_resolve_name==1.3.10
 platformdirs==4.2.0
 plotly==5.22.0
-polars-lts-cpu==0.20.26
 pre-commit==3.5.0
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
+prophet==1.1.5
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
@@ -107,14 +109,17 @@ six==1.16.0
 soupsieve==2.5
 SQLAlchemy==2.0.29
 stack-data==0.6.3
+stanio==0.5.0
 tenacity==8.3.0
 threadpoolctl==3.4.0
 tomli==2.0.1
 tornado==6.4
+tqdm==4.66.4
 traitlets==5.14.2
 typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
+-e git+https://github.com/abhishekde95/Projects.git@c30d2b46523f5afe03f1e60bd6732381c90a4f79#egg=utils
 virtualenv==20.26.2
 wcwidth==0.2.13
 webencodings==0.5.1
