--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.13.1
 appdirs==1.4.4
 appnope==0.1.4
+arch==5.6.0
 astor==0.8.1
 asttokens==2.4.1
 async-generator==1.10
@@ -30,6 +31,7 @@ filelock==3.14.0
 fonttools==4.51.0
 formulaic==1.0.1
 frozendict==2.4.1
+fsspec==2024.9.0
 future==1.0.0
 graphlib_backport==1.1.0
 greenlet==3.0.3
@@ -62,10 +64,12 @@ Mako==1.3.2
 MarkupSafe==2.1.5
 matplotlib==3.7.5
 matplotlib-inline==0.1.6
+mpmath==1.3.0
 multitasking==0.0.11
 mypy-extensions==1.0.0
 nbformat==5.10.4
 nest-asyncio==1.6.0
+networkx==3.1
 nodeenv==1.8.0
 numpy==1.24.4
 oauthlib==3.2.2
@@ -86,6 +90,7 @@ plotly==5.22.0
 pre-commit==3.5.0
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
+property-cached==1.6.4
 prophet==1.1.5
 psutil==5.9.8
 ptyprocess==0.7.0
@@ -113,16 +118,18 @@ SQLAlchemy==2.0.29
 stack-data==0.6.3
 stanio==0.5.0
 statsmodels==0.14.1
+sympy==1.13.3
 tenacity==8.3.0
 threadpoolctl==3.4.0
 tomli==2.0.1
+torch==2.2.2
 tornado==6.4
 tqdm==4.66.4
 traitlets==5.14.2
 typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
--e git+https://github.com/abhishekde95/Projects.git@ba8c790f0d5a195a2388918f0a3764701a650f3a#egg=utils
+-e git+https://github.com/abhishekde95/Projects.git@4b544c4f8e459f31d7a0826ee9d96449ac4ef955#egg=utils
 virtualenv==20.26.2
 wcwidth==0.2.13
 webencodings==0.5.1
