--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiosignal==1.3.1
 alembic==1.13.1
 appdirs==1.4.4
 appnope==0.1.4
@@ -31,6 +32,7 @@ filelock==3.14.0
 fonttools==4.51.0
 formulaic==1.0.1
 frozendict==2.4.1
+frozenlist==1.4.1
 fsspec==2024.9.0
 future==1.0.0
 graphlib_backport==1.1.0
@@ -45,6 +47,7 @@ install==1.3.5
 interface-meta==1.3.0
 ipykernel==6.29.4
 ipython==8.12.3
+ipywidgets==8.1.5
 isort==5.13.2
 jedi==0.19.1
 Jinja2==3.1.3
@@ -55,6 +58,7 @@ jupyter-telemetry==0.1.0
 jupyter_client==8.6.1
 jupyter_core==5.7.2
 jupyterhub==4.1.5
+jupyterlab_widgets==3.0.13
 kaleido==0.2.1
 kiwisolver==1.4.5
 lifelines==0.27.8
@@ -65,6 +69,7 @@ MarkupSafe==2.1.5
 matplotlib==3.7.5
 matplotlib-inline==0.1.6
 mpmath==1.3.0
+msgpack==1.1.0
 multitasking==0.0.11
 mypy-extensions==1.0.0
 nbformat==5.10.4
@@ -92,9 +97,11 @@ prometheus_client==0.20.0
 prompt-toolkit==3.0.43
 property-cached==1.6.4
 prophet==1.1.5
+protobuf==5.28.2
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyarrow==17.0.0
 pycparser==2.22
 Pygments==2.17.2
 pyOpenSSL==24.1.0
@@ -104,6 +111,7 @@ python-json-logger==2.0.7
 pytz==2024.1
 PyYAML==6.0.1
 pyzmq==25.1.2
+ray==2.10.0
 referencing==0.34.0
 requests==2.31.0
 rpds-py==0.18.0
@@ -120,6 +128,7 @@ stanio==0.5.0
 statsmodels==0.14.1
 sympy==1.13.3
 tenacity==8.3.0
+tensorboardX==2.6.2.2
 threadpoolctl==3.4.0
 tomli==2.0.1
 torch==2.2.2
@@ -130,10 +139,11 @@ traitlets==5.14.2
 typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
--e git+https://github.com/abhishekde95/Projects.git@efbf6ad2e6142319dac2e7a5d70e678c45543b4e#egg=utils
+-e git+https://github.com/abhishekde95/Projects.git@f8a78edf1a106a963491583d4051c0fc5254dd44#egg=utils
 virtualenv==20.26.2
 wcwidth==0.2.13
 webencodings==0.5.1
+widgetsnbextension==4.0.13
 wrapt==1.16.0
 yfinance==0.2.37
 zipp==3.18.1
